# tdigest-rust

./: Cargo.toml  LICENSE.md  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/benchmark-example/: Cargo.toml
examples/benchmark-example/src/: main.rs
examples/tdigest-examples/: Cargo.toml  main.rs
examples/tdigest-examples/src/: main.rs
src/: .lib.rs.swp  lib.rs
tdigest/benches/: benchmarks.rs
tdigest/src/: lib.rs
tests/: integration_tests.rs
