[package]
name = "tdigest"
version = "0.1.0"
authors = ["Aditya Mukerjee <dev@chimeracoder.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde" = {version = "1.0.83", features = ["derive"]}
"serde_json" = "1.0.83"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "benchmarks"
harness = false
